enable running tests in GitHub CI

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -21,3 +21,7 @@ jobs:
     - name: build
       run: make VERBOSE=1
       working-directory: build
+
+    - name: run tests
+      run: make VERBOSE=1 test
+      working-directory: build
