--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -24,3 +24,7 @@ jobs:
     - name: build
       run: make VERBOSE=1
       working-directory: build
+
+    - name: run tests
+      run: make VERBOSE=1 test
+      working-directory: build
