--- a/.github/workflows/build-freebsd.yml
+++ b/.github/workflows/build-freebsd.yml
@@ -22,3 +22,9 @@ jobs:
           cmake -DCMAKE_BUILD_TYPE=Debug ..
           make VERBOSE=1
           make VERBOSE=1 test
+
+    - name: save test report
+      uses: actions/upload-artifacts@v2
+      with:
+        name: freebsd-test-report
+        path: build/Testing/Temporary/LastTest.log
