--- a/.github/workflows/build-freebsd.yml
+++ b/.github/workflows/build-freebsd.yml
@@ -24,7 +24,7 @@ jobs:
           make VERBOSE=1 test
 
     - name: save test report
-      uses: actions/upload-artifacts@v2
+      uses: actions/upload-artifact@v2
       with:
         name: freebsd-test-report
         path: build/Testing/Temporary/LastTest.log
