make test results to be gathered in case of failing tests

--- a/.github/workflows/build-freebsd.yml
+++ b/.github/workflows/build-freebsd.yml
@@ -24,6 +24,7 @@ jobs:
           make VERBOSE=1 test
 
     - name: save test report
+      if:   failure()
       uses: actions/upload-artifact@v2
       with:
         name: freebsd-test-report
