relax artifacts paths to allow them being gathered

--- a/.github/workflows/build-freebsd.yml
+++ b/.github/workflows/build-freebsd.yml
@@ -30,6 +30,6 @@ jobs:
         name: freebsd-test-report
         path: |
           build/Testing/Temporary/LastTest.log
-          build/*.expectedout
-          build/*.stdout
-          build/*.stderr
+          build/**/*.expectedout
+          build/**/*.stdout
+          build/**/*.stderr
