--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -33,6 +33,6 @@ jobs:
         name: macos-test-report
         path: |
           build/Testing/Temporary/LastTest.log
-          build/*.expectedout
-          build/*.stdout
-          build/*.stderr
+          build/**/*.expectedout
+          build/**/*.stdout
+          build/**/*.stderr
