--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_test(NAME test-01
 add_custom_target(test-01
                   sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 01 no $<TARGET_FILE:tlc> -i 2 files
                   COMMENT "Running test 01"
+                  VERBATIM
                  )
 
 add_custom_command(OUTPUT 02.expectedout
@@ -20,13 +21,14 @@ add_custom_command(OUTPUT 02.expectedout
                   )
 
 add_test(NAME test-02
-         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 02 yes $<TARGET_FILE:tlc> -fpi 100 '[%i] %%%% got %s'
+         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 02 yes $<TARGET_FILE:tlc> -fpi 100 "\[%i\] %%%% got %s"
         )
 
 add_custom_target(test-02
-                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 02 yes $<TARGET_FILE:tlc> -fpi 100 '[%i] %%%% got %s'
+                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 02 yes $<TARGET_FILE:tlc> -fpi 100 "\[%i\] %%%% got %s"
                   COMMENT "Running test 02"
                   DEPENDS 02.expectedout
+                  VERBATIM
                  )
 
 add_test(NAME test-03
@@ -36,24 +38,27 @@ add_test(NAME test-03
 add_custom_target(test-03
                   sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 03 no $<TARGET_FILE:tlc> -i 0
                   COMMENT "Running test 03"
+                  VERBATIM
                  )
 
 add_test(NAME test-04
-         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 04 no $<TARGET_FILE:tlc> -e 100 'number lines'
+         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 04 no $<TARGET_FILE:tlc> -e 100 "number lines"
         )
 
 add_custom_target(test-04
-                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 04 no $<TARGET_FILE:tlc> -e 100 'number lines'
+                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 04 no $<TARGET_FILE:tlc> -e 100 "number lines"
                   COMMENT "Running test 04"
+                  VERBATIM
                  )
 
 add_test(NAME test-05
-         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 05 no $<TARGET_FILE:tlc> -fe 100 '[%p%] lines'
+         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 05 no $<TARGET_FILE:tlc> -fe 100 "\[%p%\] lines"
         )
 
 add_custom_target(test-05
-                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 05 no $<TARGET_FILE:tlc> -fe 100 '[%p%] lines'
+                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 05 no $<TARGET_FILE:tlc> -fe 100 "\[%p%\] lines"
                   COMMENT "Running test 05"
+                  VERBATIM
                  )
 
 add_custom_command(OUTPUT 06.expectedout
@@ -63,11 +68,12 @@ add_custom_command(OUTPUT 06.expectedout
                   )
 
 add_test(NAME test-06
-         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 06 yes $<TARGET_FILE:tlc> -d '' -p
+         COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 06 yes $<TARGET_FILE:tlc> -d "" -p
         )
 
 add_custom_target(test-06
-                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 06 yes $<TARGET_FILE:tlc> -d '' -p
+                  sh ${CMAKE_CURRENT_SOURCE_DIR}/run-test 06 yes $<TARGET_FILE:tlc> -d "" -p
                   COMMENT "Running test 06"
                   DEPENDS 06.expectedout
+                  VERBATIM
                  )
